--- a/books/writing-wasm-runtime-in-rust/config.yaml
+++ b/books/writing-wasm-runtime-in-rust/config.yaml
@@ -1,7 +1,6 @@
 title: "RustでWasm Runtimeを実装する"
 summary: |
-  Rustで"Hello World"を出力できる小さなWasm Runtimeを実装して、Wasmがどのように動作しているのかを理解する本です。
-  Wasm RuntimeはいわばJVMやRubyVMのようなもので、本書を最後まで読み実装することでVMがどのように動作しているのかも合わせて理解できます。
+  Rustで"Hello World"を出力できる小さなWasm Runtimeを実装して、Wasmの動作原理を理解する本です。
 topics: ["wasm", "rust"] # トピック（5つまで）
 published: false # falseだと下書き
 price: 0 # 有料の場合200〜5000
