--- a/books/writing-wasm-runtime-in-rust/config.yaml
+++ b/books/writing-wasm-runtime-in-rust/config.yaml
@@ -13,9 +13,9 @@ chapters:
   - 06_decode_function_1
   - 07_decode_function_2
   - 08_how_function_execute
-  - 09_build_runtime_1
-  - 10_build_runtime_2
-  - 11_build_runtime_3
-  - 12_build_runtime_4
-  - 13_build_runtime_5
-  - 14_build_runtime_6
+  - 09_build_runtime_func_execute
+  - 10_build_runtime_func_call
+  - 11_build_runtime_external_func_call
+  - 12_build_runtime_additional_instruction
+  - 13_build_runtime_initialize_memory
+  - 14_build_runtime_wasi
