--- a/books/writing-a-database-in-rust/config.yaml
+++ b/books/writing-a-database-in-rust/config.yaml
@@ -1,6 +1,6 @@
-title: "Rustでリレーショナルデータベースを実装する"
+title: "Rustでデータベースを実装する"
 summary: |
-  Rustでリレーショナルデータベース(RDBMS)をゼロから実装して、データベースの動作原理を理解する本です。
+  RustでRDBMSをゼロから実装して動作原理を理解する本です。
 topics: ["database", "rust"] # トピック（5つまで）
 published: false # falseだと下書き
 price: 0 # 有料の場合200〜5000
